# plinth

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  add_to_path.ps1  cliff.toml  remove_from_path.ps1  vcpkg.json
.devcontainer/: devcontainer.json
.githooks/: commit-msg
.github/actions/ubuntu-build-steps/: action.yml
.github/workflows/: commit-messages.yml  release.yml  stale-branches.yml  ubuntu-build.yml  ubuntu-coverage.yml  ubuntu-sanitizers.yml  ubuntu-static-analysis.yml  windows-build.yml
cmake/: CPM.cmake  Config.cmake.in  Doxyfile.in  coverage.cmake  cppcheck.cmake  create_target_export_header.cmake  detect_ninja.cmake  packaging.cmake  project_preamble.cmake  setup_doxygen.cmake  setup_export_set_installation.cmake  static_analysis.cmake
dependencies/: CMakeLists.txt
dependencies/fmt/: CMakeLists.txt
dependencies/googletest/: CMakeLists.txt
dependencies/linal/: CMakeLists.txt
docker/: .dockerignore  Dockerfile  docker-compose.yml
examples/: CMakeLists.txt  Grid.hpp  Origin.hpp  example_renderer_standalone.cpp  example_showcase_scene.cpp  example_textured_mesh.cpp  sleep_helper.hpp
src/: CMakeLists.txt
src/plinth/: CMakeLists.txt
src/plinth/include/Renderer/: Assert.hpp  Camera.hpp  CameraAutoFit.hpp  CameraInteractor.hpp  Color.hpp  DLLWarnings.hpp  GlfwWindow.hpp  ImGuiOverlay.hpp  InputCaptureState.hpp  InputState.hpp  MathConstants.hpp  PickRay.hpp  RayPlaneIntersection.hpp  Renderer.hpp  RendererGlfw.hpp  Viewport.hpp  Warnings.hpp  WindowSettings.hpp
src/plinth/include/plinth/: Assert.hpp  BufferAccessPattern.hpp  Camera.hpp  CameraAutoFit.hpp  CameraInteractor.hpp  CameraPivotMode.hpp  CameraProjectionType.hpp  FrameState.hpp  GlfwWindow.hpp  ImGuiOverlay.hpp  InputCaptureState.hpp  InputState.hpp  LightingConfig.hpp  LineType.hpp  Plane.hpp  PostProcessingEnums.hpp  RayPlaneIntersection.hpp  Renderer.hpp  Texture.hpp  UiMode.hpp  Viewport.hpp  WindowSettings.hpp
src/plinth/opengl/: CMakeLists.txt
src/plinth/opengl/include/: Buffer.hpp
src/plinth/opengl/include/OpenGL/: Attribute.hpp  BufferAccessPattern.hpp  BufferId.hpp  ErrorReporting.hpp  FXAAPass.hpp  FrameState.hpp  Framebuffer.hpp  GpuCapabilities.hpp  IndexBuffer.hpp  LineType.hpp  Location.hpp  OpenGL.hpp  PostProcessingPass.hpp  PresentationPass.hpp  ShaderSources.hpp  SignedIntId.hpp  Texture2D.hpp  Uniform.hpp  UnsignedIntId.hpp  UpdateBuffer.hpp  VertexArray.hpp  VertexBuffer.hpp
src/plinth/opengl/include/OpenGL/Drawable/: DrawableTransparencyInfo.hpp  DrawablesManager.hpp  LineDrawable.hpp  MeshDrawable.hpp  PointDrawable.hpp
src/plinth/opengl/include/OpenGL/Programs/: CreateProgram.hpp  LineProgram.hpp  MeshProgram.hpp  PointProgram.hpp  PostProcessingProgram.hpp  ProgramId.hpp  ProgramManager.hpp
src/plinth/opengl/source/: Attribute.cpp  ErrorReporting.cpp  FXAAPass.cpp  FrameState.cpp  Framebuffer.cpp  GpuCapabilities.cpp  IndexBuffer.cpp  PostProcessingPass.cpp  PresentationPass.cpp  ShaderSources.cpp  Texture2D.cpp  Uniform.cpp  VertexArray.cpp  VertexBuffer.cpp
src/plinth/opengl/source/Drawable/: LineDrawable.cpp  MeshDrawable.cpp  PointDrawable.cpp
src/plinth/opengl/source/Programs/: CreateProgram.cpp  LineProgram.cpp  MeshProgram.cpp  PointProgram.cpp  PostProcessingProgram.cpp  ProgramId.cpp  ProgramManager.cpp  ProgramOpenGL.cpp  ProgramOpenGL.hpp
src/plinth/source/: Camera.cpp  CameraAutoFit.cpp  GlfwWindow.cpp  ImGuiOverlay.cpp  InputState.cpp  InputStateInternal.hpp  Renderer.cpp
test/: CMakeLists.txt  lsan.supp  tsan.supp
test/TestInstall/: CMakeLists.txt
test/TestInstall/geoqik_install_test_template/: CMakeLists.txt  CMakePresets.json  main.cpp
test/TestInstall/plinth_install_test_template/: CMakeLists.txt  CMakePresets.json  client_main.cpp  main.cpp  vcpkg.json
test/TestInstall/plinth_install_test_template/cmake/: Warnings.cmake
test/TestRenderer/: AssertTest.cpp  BufferTest.cpp  CMakeLists.txt  CameraAutoFitTest.cpp  CameraInteractorTest.cpp  CameraTest.cpp  CaptureFixture.hpp  CaptureSpikeTest.cpp  CreateProgramTest.cpp  DrawableTest.cpp  DrawableTransparencyInfoTest.cpp  ErrorReportingSinkTest.cpp  ErrorReportingTest.cpp  FXAAPassTest.cpp  FrameStateTest.cpp  FramebufferTest.cpp  GeoQikTestMatchers.hpp  GoldenImageTest.cpp  GpuCapabilitiesTest.cpp  InputCaptureStateTest.cpp  InputStateTest.cpp  InputStateValueTest.cpp  PostProcessingPassTest.cpp  PostProcessingPipelineTest.cpp  PresentationPassTest.cpp  RayPlaneIntersectionTest.cpp  RendererPresentationTest.cpp  RendererTest.cpp  RendererViewportTest.cpp  Texture2DTest.cpp  TexturedMeshTest.cpp  TransparencySortingTest.cpp  ViewportTest.cpp  WindowSettingsTest.cpp
tools/: format_cpp.ps1
tools/git-hooks/: check-conventional-commit.sh  install-hooks.ps1  install-hooks.sh
